--- a/carbonia/ia/Templates/login.html
+++ b/carbonia/ia/Templates/login.html
@@ -1,12 +1,12 @@
 {% extends 'partials/base-sinsidebar.html' %}
-
+{% load static %}
 {% block title %}Login - Carbonia{% endblock %}
 
 {% block content %}
 <div class="login-page">
     <div class="login-container">
         <div class="logo">
-            <img src="carbonia\static\img\LogoColor.png" alt="CarbonIA Logo">
+            <img src="{% static 'img/LogoColor.png' %}" alt="CarbonIA Logo">
             <div class="brand-name">CarbonIA</div>
         </div>
         <div class="form-title">INGRESAR</div>
