--- a/carbonia/ia/Templates/login.html
+++ b/carbonia/ia/Templates/login.html
@@ -8,18 +8,12 @@
         <div class="logo">
             <a href="/">
                 <img src="{% static 'img/LogoColor.png' %}" alt="CarbonIA Logo">
-              </a>
+            </a>
         </div>
         <div class="form-title">Iniciar sesión</div>
         <div class="form-subtitle">Ingrese sus datos</div>
         <form action="{% url 'login' %}" method="post">
             {% csrf_token %}
-            <!--
-            <div class="input-group">
-                <label for="username">Nombre</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            -->
             
             <div class="input-group">
                 <label for="email">Correo</label>
@@ -30,10 +24,22 @@
                 <label for="password">Contraseña</label>
                 <input type="password" id="password" name="password" required>
             </div>
+
+            <!-- Toggle para seleccionar el tipo de usuario -->
+            <div class="input-group">
+                <label for="is_admin" class="switch-label" style="display: flex; align-items: center;">
+                    <span style="margin-right: 10px;">Iniciar sesión como administrador</span>
+                    <label class="switch">
+                      <input type="checkbox" id="is_admin" name="is_admin">
+                      <span class="slider round"></span>
+                    </label>
+                </label>
+            </div>
+
             <button type="submit" class="submit-btn">Ingresar</button>
         </form>
         <div class="link">
-            ¿Olvidaste tu clave? <a href="{% url 'registro' %}">Recuperala aquí</a>
+            ¿Olvidaste tu clave? <a href="{% url 'registro' %}">Recupérala aquí</a>
         </div>
     </div>
 </div>
